# chatbot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  chat_bot.py  chatbot.py  cleaner.py  constants.py  data_cleanse.py  ed-fauxlis.py  extract.py  issues.md  markov_chain.py  markov_chains.py  pyproject.toml  pyvenv.cfg  requirements.txt  scrape_twitter.py  setup.cfg  text_generator.py
.github/workflows/: CI.yml  TODO.yml  bandit.yml  codeql-analysis.yml  dependency-review.yml  interrogate-documentation.yml  python-app.yml  tag_version.yml
chatbot/: __init__.py  chatbot.py  constants.py  data_cleanse.py  extract.py  markov_chain.py
chatbot/data/cleaned/: input_data.txt  test_csv.csv  twitter_dump.csv
chatbot/data/raw/: twitter_dump.csv
chatbot/data/staging/: ed_teams_messages.txt  twitter_dump.csv
chatbot/data/yaml/: twitter.yml
data/cleaned/: mock_response.csv
data/raw/: eds-posts-text.json  mock_response.csv
input/: cleaned_ed_teams_messages.txt  cleaned_edthewlis_twitter_dump.csv  ed_teams_messages.txt  ed_teams_messages.txt.clean  eds-posts-text.json.clean  edthewlis_twitter_dump.csv.clean  linkedin.yml  teams.yml  twitter.yml  twitter_dump.csv  twitter_dump.csv.clean
linkedin/: linkedin.py  requirements.txt
src/: chat_bot.py  chatbot.py  constants.py  data_cleanse.py  extract.py  markov_chain.py
tests/: __init__.py  test_chatbot.py  test_constants.py  test_data_cleanse.py  test_extract.py  test_markov_chain.py
tests/unit/: test_data_cleanse.py
twitter/: README.md  edthewlis_twitter_dump.csv  run.py
(+3 files in other folders)
