[metadata]
name = chatbot_dani_massarano
version = 0.12.0
description = Builds a message chatbot using a markov chain
long_description = file: README.md
long_description_content_type = text/markdown
author = Dani Massarano
author_email = danielmassarano@gmail.com
license = GPL
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    homepage = https://github.com/danmassarano/chatbot

[options]
install_requires =
    markovify>=0.9.4
    tweepy>=4.10.0
python_requires = >=3.6
package_dir =
    =chatbot
